Update generated Bach.java